# FocusFlow

./: .gitignore  README.md  app.js  build.bat  build.sh  index.html  manifest.json  package.json  server.js  style.css  sw.js
.github/workflows/: build-offline.yml  build-tauri.yml  build-windows.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: generate-icons.js
