[package]
name = "focusflow"
version = "1.0.0"
description = "تطبيق إدارة الوقت والتركيز"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["notification-all", "shell-open", "fs-read-file", "fs-write-file"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
